tests/parser/var_err20.expected
Syntax Error: line 4:
Unexpected token (TOK_ID, 'test'), likely missing a(n)  
  'TOK_KEY_BEGIN' or
  'TOK_KEY_CONST' or
  'TOK_KEY_VAR' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
