tests/parser/var_err20.mtp
(* variable section start *)

(*variable listing, missing var*)
test, test2 : integer;

begin

end
.